--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 
+    <!-- nav start  -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img class="logo-nav" src="ress/logo.png">
@@ -41,7 +42,64 @@
             </a>
         </div>
     </nav>
+    <!-- nav end  -->
 
+    <!-- Carousel start  -->
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="ress/gaming-set.jpg" class="d-block w-100 carousel-img">
+            </div>
+            <div class="carousel-item">
+                <img src="ress/mouses.jpg" class="d-block w-100 carousel-img">
+            </div>
+            <div class="carousel-item">
+                <img src="ress/headphones.png" class="d-block w-100 carousel-img">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <!-- Carousel end  -->
+
+    <!-- SPONSORED TEAMS start   -->
+
+    <div class="sponsored container-fluid">
+        <h1>Sponsored Teams</h1>
+
+        <div class="sponsored-images">
+            <img src="ress/SolMid.png" class="sponsored-image">
+            <img src="ress/Solary.png" class="sponsored-image">
+            <img src="ress/G2-Esports.png" class="sponsored-image">
+            <img src="ress/Noble.png" class="sponsored-image">
+        </div>
+    </div>
+    <!-- SPONSORED TEAMS end   -->
+
+    <!-- products start  -->
+
+
+    <!-- products end  -->
+
+    <!-- script  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
