--- a/index.html
+++ b/index.html
@@ -96,6 +96,11 @@
 
     <!-- products start  -->
 
+    <div class="products">
+
+        <h1>popular products</h1>
+
+    </div>
 
     <!-- products end  -->
 
