--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
         <div class="products-cards"></div>
       </div>
     </div>
+    <div class="center">
+      <a class="btn btn-light" href="#" role="button">Show More</a>
+    </div>
 
     <!-- products end  -->
 
