© 2021 Logitech. All rights reserved

--- a/index.html
+++ b/index.html
@@ -141,20 +141,21 @@
 
     <!-- products end  -->
 
-    <!-- SPONSORED TEAMS start   -->
+    <footer>
+      <!-- SPONSORED TEAMS start   -->
+      <div class="sponsored container-fluid">
+        <h1>Sponsored Teams</h1>
 
-    <div class="sponsored container-fluid">
-      <h1>Sponsored Teams</h1>
-
-      <div class="sponsored-images">
-        <img src="ress/SolMid.png" class="sponsored-image" />
-        <img src="ress/Solary.png" class="sponsored-image" />
-        <img src="ress/G2-Esports.png" class="sponsored-image" />
-        <img src="ress/Noble.png" class="sponsored-image" />
+        <div class="sponsored-images">
+          <img src="ress/SolMid.png" class="sponsored-image" />
+          <img src="ress/Solary.png" class="sponsored-image" />
+          <img src="ress/G2-Esports.png" class="sponsored-image" />
+          <img src="ress/Noble.png" class="sponsored-image" />
+        </div>
       </div>
-    </div>
-
-    <!-- SPONSORED TEAMS end   -->
+      <!-- SPONSORED TEAMS end   -->
+      <h6>© 2021 Logitech. All rights reserved</h6>
+    </footer>
 
     <!-- script  -->
     <script
