--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- nav start  -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img class="logo-nav" src="ress/logo.png" />
         </a>
 
@@ -96,13 +96,19 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="ress/gaming-set.jpg" class="d-block w-100 carousel-img" />
+          <a href=""
+            ><img src="ress/headphones.png" class="d-block w-100 carousel-img"
+          /></a>
         </div>
         <div class="carousel-item">
-          <img src="ress/mouses.jpg" class="d-block w-100 carousel-img" />
+          <a href=""
+            ><img src="ress/mouses.jpg" class="d-block w-100 carousel-img"
+          /></a>
         </div>
         <div class="carousel-item">
-          <img src="ress/headphones.png" class="d-block w-100 carousel-img" />
+          <a href=""
+            ><img src="ress/gaming-set.jpg" class="d-block w-100 carousel-img"
+          /></a>
         </div>
       </div>
       <button
