--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="#">All Products</a>
+              <a class="nav-link" href="HTML/AllProducts.html">All Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
@@ -170,5 +170,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/main.js"></script>
+    <script src="js/popularProducts.js"></script>
   </body>
 </html>
