--- a/HTML/AllProducts.html
+++ b/HTML/AllProducts.html
@@ -49,6 +49,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
+              <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="AllProducts.html">All Products</a>
             </li>
             <li class="nav-item">
