--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="HTML/AllProducts.html">All Products</a>
             </li>
             <li class="nav-item">
