--- a/HTML/productPage.html
+++ b/HTML/productPage.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/styling.css" />
+    <link rel="icon" href="../ress/logo.png" type="image/x-icon" />
+    <title>Logitech</title>
   </head>
+
   <body>
+    <!-- nav start  -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
-          <img class="logo-nav" src="ress/logo.png" />
+        <a class="navbar-brand" href="../index.html">
+          <img class="logo-nav" src="../ress/logo.png" />
         </a>
 
         <button
@@ -28,10 +50,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="HTML/AllProducts.html">All Products</a>
+              <a class="nav-link" href="AllProducts.html">All Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
@@ -44,9 +66,41 @@
         </a>
       </div>
     </nav>
+    <!-- nav end  -->
+
+    <!-- product start  -->
 
     <div class="product"></div>
 
+    <!-- product end  -->
+
+    <!-- footer start  -->
+
+    <footer>
+      <!-- SPONSORED TEAMS start   -->
+      <div class="sponsored container-fluid">
+        <h1>Sponsored Teams</h1>
+
+        <div class="sponsored-images">
+          <img src="../ress/SolMid.png" class="sponsored-image" />
+          <img src="../ress/Solary.png" class="sponsored-image" />
+          <img src="../ress/G2-Esports.png" class="sponsored-image" />
+          <img src="../ress/Noble.png" class="sponsored-image" />
+        </div>
+      </div>
+      <!-- SPONSORED TEAMS end   -->
+      <h6>© 2021 Logitech. All rights reserved</h6>
+    </footer>
+
+    <!-- footer end  -->
+
+    <!-- scrips -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
     <script src="../js/allProducts.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 </html>
