--- a/AllProducts.html
+++ b/AllProducts.html
@@ -22,16 +22,16 @@
       href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styling.css" />
-    <link rel="icon" href="../ress/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/styling.css" />
+    <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
   </head>
   <body>
     <!-- nav start  -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img class="logo-nav" src="../ress/logo.png" />
+        <a class="navbar-brand" href="index.html">
+          <img class="logo-nav" src="ress/logo.png" />
         </a>
 
         <button
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="AllProducts.html">All Products</a>
@@ -86,10 +86,10 @@
         <h1>Sponsored Teams</h1>
 
         <div class="sponsored-images">
-          <img src="../ress/SolMid.png" class="sponsored-image" />
-          <img src="../ress/Solary.png" class="sponsored-image" />
-          <img src="../ress/G2-Esports.png" class="sponsored-image" />
-          <img src="../ress/Noble.png" class="sponsored-image" />
+          <img src="ress/SolMid.png" class="sponsored-image" />
+          <img src="ress/Solary.png" class="sponsored-image" />
+          <img src="ress/G2-Esports.png" class="sponsored-image" />
+          <img src="ress/Noble.png" class="sponsored-image" />
         </div>
       </div>
       <!-- SPONSORED TEAMS end   -->
@@ -104,7 +104,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/allProducts.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="js/allProducts.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
