--- a/index.html
+++ b/index.html
@@ -1,128 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/styling.css" />
+    <link rel="icon" href="ress/logo.png" type="image/x-icon" />
+    <title>Logitech</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="css/styling.css" />
-  <link rel="icon" href="ress/logo.png" type="image/x-icon" />
-  <title>Logitech</title>
-</head>
+  <body>
+    <!-- nav start  -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img class="logo-nav" src="ress/logo.png" />
+        </a>
 
-<body>
-  <!-- nav start  -->
-  <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">
-        <img class="logo-nav" src="ress/logo.png" />
-      </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="AllProducts.html">All Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+          </ul>
+        </div>
+
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-shopping-cart fa-2x"></i>
+        </a>
+      </div>
+    </nav>
+    <!-- nav end  -->
+
+    <!-- Carousel start  -->
+
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-bs-ride="carousel"
+    >
+      <div class="carousel-indicators">
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="0"
+          class="active"
+          aria-current="true"
+          aria-label="Slide 1"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="1"
+          aria-label="Slide 2"
+        ></button>
+        <button
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide-to="2"
+          aria-label="Slide 3"
+        ></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <a href="AllProducts.html"
+            ><img src="ress/headphones.png" class="d-block w-100 carousel-img"
+          /></a>
+        </div>
+        <div class="carousel-item">
+          <a href="AllProducts.html"
+            ><img src="ress/mouses.jpg" class="d-block w-100 carousel-img"
+          /></a>
+        </div>
+        <div class="carousel-item">
+          <a href="AllProducts.html"
+            ><img src="ress/gaming-set.jpg" class="d-block w-100 carousel-img"
+          /></a>
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="HTML/AllProducts.html">All Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-        </ul>
-      </div>
-
-      <a class="navbar-brand" href="#">
-        <i class="fas fa-shopping-cart fa-2x"></i>
-      </a>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-  </nav>
-  <!-- nav end  -->
 
-  <!-- Carousel start  -->
+    <!-- Carousel end  -->
 
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <a href="HTML/AllProducts.html"><img src="ress/headphones.png" class="d-block w-100 carousel-img" /></a>
-      </div>
-      <div class="carousel-item">
-        <a href="HTML/AllProducts.html"><img src="ress/mouses.jpg" class="d-block w-100 carousel-img" /></a>
-      </div>
-      <div class="carousel-item">
-        <a href="HTML/AllProducts.html"><img src="ress/gaming-set.jpg" class="d-block w-100 carousel-img" /></a>
+    <!-- products start  -->
+
+    <div class="products">
+      <h1>popular products</h1>
+      <div class="center">
+        <div class="products-cards"></div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-
-  <!-- Carousel end  -->
-
-  <!-- products start  -->
-
-  <div class="products">
-    <h1>popular products</h1>
     <div class="center">
-      <div class="products-cards"></div>
+      <a class="btn btn-light" href="AllProducts.html" role="button"
+        >Show More</a
+      >
     </div>
-  </div>
-  <div class="center">
-    <a class="btn btn-light" href="HTML/AllProducts.html" role="button">Show More</a>
-  </div>
 
-  <!-- products end  -->
+    <!-- products end  -->
 
-  <footer>
-    <!-- SPONSORED TEAMS start   -->
-    <div class="sponsored container-fluid">
-      <h1>Sponsored Teams</h1>
+    <footer>
+      <!-- SPONSORED TEAMS start   -->
+      <div class="sponsored container-fluid">
+        <h1>Sponsored Teams</h1>
 
-      <div class="sponsored-images">
-        <img src="ress/SolMid.png" class="sponsored-image" />
-        <img src="ress/Solary.png" class="sponsored-image" />
-        <img src="ress/G2-Esports.png" class="sponsored-image" />
-        <img src="ress/Noble.png" class="sponsored-image" />
+        <div class="sponsored-images">
+          <img src="ress/SolMid.png" class="sponsored-image" />
+          <img src="ress/Solary.png" class="sponsored-image" />
+          <img src="ress/G2-Esports.png" class="sponsored-image" />
+          <img src="ress/Noble.png" class="sponsored-image" />
+        </div>
       </div>
-    </div>
-    <!-- SPONSORED TEAMS end   -->
-    <h6>© 2021 Logitech. All rights reserved</h6>
-  </footer>
+      <!-- SPONSORED TEAMS end   -->
+      <h6>© 2021 Logitech. All rights reserved</h6>
+    </footer>
 
-  <!-- script  -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-    crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
-  <script src="js/popularProducts.js"></script>
-</body>
-
+    <!-- script  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+      crossorigin="anonymous"
+    ></script>
+    <script src="js/main.js"></script>
+    <script src="js/popularProducts.js"></script>
+  </body>
 </html>
