--- a/AllProducts.html
+++ b/AllProducts.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <!-- SPONSORED TEAMS end   -->
-      <h6>© 2021 Logitech. All rights reserved</h6>
+      <h6 class="rights">© 2021 Logitech. All rights reserved</h6>
     </footer>
 
     <!-- footer end  -->
