--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
@@ -56,12 +57,12 @@
               <a class="nav-link" href="AllProducts.html">All Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="Contact.html">Contact Us</a>
             </li>
           </ul>
         </div>
 
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="cart.html">
           <i class="fas fa-shopping-cart fa-2x"></i>
         </a>
       </div>
