--- a/AllProducts.html
+++ b/AllProducts.html
@@ -60,10 +60,6 @@
             </li>
           </ul>
         </div>
-
-        <a class="navbar-brand" href="cart.html">
-          <i class="fas fa-shopping-cart fa-2x"></i>
-        </a>
       </div>
     </nav>
     <!-- nav end  -->
@@ -107,5 +103,6 @@
     ></script>
     <script src="js/allProducts.js"></script>
     <script src="js/main.js"></script>
+    <!-- <script src="js/cart.js"></script> -->
   </body>
 </html>
