--- a/productPage.html
+++ b/productPage.html
@@ -32,8 +32,8 @@
     <!-- nav start  -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">
-          <img class="logo-nav" src="../ress/logo.png" />
+        <a class="navbar-brand" href="index.html">
+          <img class="logo-nav" src="ress/logo.png" />
         </a>
 
         <button
@@ -61,10 +61,6 @@
             </li>
           </ul>
         </div>
-
-        <a class="navbar-brand" href="cart.htmls">
-          <i class="fas fa-shopping-cart fa-2x"></i>
-        </a>
       </div>
     </nav>
     <!-- nav end  -->
@@ -101,7 +97,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/allProducts.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="/js/allProducts.js"></script>
+    <script src="/js/main.js"></script>
   </body>
 </html>
