--- a/productPage.html
+++ b/productPage.html
@@ -23,8 +23,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../css/styling.css" />
-    <link rel="icon" href="../ress/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/styling.css" />
+    <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
   </head>
 
