--- a/productPage.html
+++ b/productPage.html
@@ -79,10 +79,10 @@
         <h1>Sponsored Teams</h1>
 
         <div class="sponsored-images">
-          <img src="../ress/SolMid.png" class="sponsored-image" />
-          <img src="../ress/Solary.png" class="sponsored-image" />
-          <img src="../ress/G2-Esports.png" class="sponsored-image" />
-          <img src="../ress/Noble.png" class="sponsored-image" />
+          <img src="ress/SolMid.png" class="sponsored-image" />
+          <img src="ress/Solary.png" class="sponsored-image" />
+          <img src="ress/G2-Esports.png" class="sponsored-image" />
+          <img src="ress/Noble.png" class="sponsored-image" />
         </div>
       </div>
       <!-- SPONSORED TEAMS end   -->
