--- a/productPage.html
+++ b/productPage.html
@@ -97,7 +97,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/allProducts.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/allProducts.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
