--- a/productPage.html
+++ b/productPage.html
@@ -99,5 +99,6 @@
     ></script>
     <script src="js/allProducts.js"></script>
     <script src="js/main.js"></script>
+    <!-- indicator  -->
   </body>
 </html>
