better styling in form + fix

--- a/Contact.html
+++ b/Contact.html
@@ -148,7 +148,9 @@
         </div>
       </div>
       <div>
-        <button type="submit">Sumbmit</button>
+        <button type="submit" class="btn btn-light" role="button">
+          Submit
+        </button>
       </div>
     </form>
 
