--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
@@ -113,6 +113,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
   </body>
