--- a/AllProducts.html
+++ b/AllProducts.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
@@ -102,6 +102,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/allProducts.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
