--- a/Contact.html
+++ b/Contact.html
@@ -22,6 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
@@ -62,30 +63,6 @@
       </div>
     </nav>
     <!-- nav end  -->
-
-    <!-- <form id="form" method="GET">
-      <div>
-        <label for="Name">Name</label>
-        <input type="text" name="name" id="Name" required />
-      </div>
-      <div>
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" required />
-      </div>
-      <div class="message">
-        <label for="message">type your message</label>
-        <textarea
-          name="message"
-          id="textarea"
-          cols="30"
-          rows="10"
-          required
-        ></textarea>
-      </div>
-      <div>
-        <button type="submit">Sumbmit</button>
-      </div>
-    </form> -->
 
     <form id="form" method="GET">
       <div class="row g-3 align-items-center">
@@ -177,5 +154,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="js/Contact.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
