--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
     <title>Logitech</title>
   </head>
 
   <body>
-    <!-- nav start  -->
+    <!-- nav start -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
@@ -146,7 +146,6 @@
         >Show More</a
       >
     </div>
-
     <!-- products end  -->
 
     <footer>
@@ -171,6 +170,7 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/popularProducts.js"></script>
   </body>
