--- a/Contact.html
+++ b/Contact.html
@@ -64,7 +64,7 @@
     </nav>
     <!-- nav end  -->
 
-    <form id="form" method="GET">
+    <form id="form">
       <div class="row g-3 align-items-center">
         <div class="col-auto">
           <label for="Name" class="col-form-label">Name</label>
@@ -90,7 +90,7 @@
         </div>
         <div class="col-auto">
           <input
-            type="email"
+            type="text"
             id="email"
             class="form-control Name"
             aria-describedby="passwordHelpInline"
