--- a/Contact.html
+++ b/Contact.html
@@ -19,12 +19,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/styling.css" />
     <link rel="icon" href="ress/logo.png" type="image/x-icon" />
+
     <title>Logitech</title>
   </head>
   <body>
@@ -105,13 +107,13 @@
       </div>
       <div class="row g-3 align-items-center">
         <div class="col-auto">
-          <label for="message" class="col-form-label">message</label>
+          <label for="message" class="col-form-label message">message</label>
         </div>
         <div class="col-auto">
           <textarea
             name="message"
             id="textarea"
-            cols="30"
+            cols="22"
             rows="10"
             class="form-control Name"
             aria-describedby="passwordHelpInline"
@@ -125,7 +127,7 @@
         </div>
       </div>
       <div>
-        <button type="submit" class="btn btn-light" role="button">
+        <button type="submit" class="btn btn-light Submit" role="button">
           Submit
         </button>
       </div>
